include build folder in repo

--- a/src/custom-hello-world/editor.scss
+++ b/src/custom-hello-world/editor.scss
@@ -3,7 +3,9 @@
 	gap: 1em;
 	align-items: center;
 	background: #6fbcac;
-
+	h3 {
+		margin: 0;
+	}
 	.hello-world-image {
 		position: relative;
 		&:hover,
