update theme info

--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /*
 Theme Name:		 viewSource Blocks
-Theme URI:		 http://childtheme-generator.com/
-Description:	 viewSource ACF is a child theme of Twenty Twenty Three, created by ChildTheme-Generator.com
-Author:			 Aurooba
-Author URI:		 http://childtheme-generator.com/
+Theme URI:		 https://viewsource.fm
+Description:	 viewSource Blocks is a child theme of Twenty Twenty Three
+Author:			 viewSource
+Author URI:		 https://viewsource.fm
 Template:		 twentytwentythree
 Version:		 1.0.0
-Text Domain:	 viewsource-acf
+Text Domain:	 viewsource-blocks
 */
 
 
