--- a/src/custom-hello-world/style.scss
+++ b/src/custom-hello-world/style.scss
@@ -1,10 +1,13 @@
 .wp-block-viewsource-custom-hello-world {
 	display: flex;
 	gap: 1em;
-	align-items: center;
+	// align-items: center;
 	/* border: 2px solid #2c757b; */
 	background: #6fbcac;
 	/* padding: 1rem; */
+	h3 {
+		align-self: center;
+	}
 
 }
 
@@ -12,7 +15,10 @@
 	img {
 		display: block;
 		width: 100%;
+		height: 100%;
+		object-fit: cover;
 	}
+	width: 100%;
 	flex-basis: 50%;
 	margin-bottom: 0;
 	figcaption { display: none; }
