--- a/src/hello-world/editor.scss
+++ b/src/hello-world/editor.scss
@@ -1,10 +1,13 @@
 .wp-block-viewsource-native-hello-world {
 	display: flex;
 	gap: 1em;
-	align-items: center;
+	// align-items: center;
 	/* border: 2px solid #2c757b; */
 	background: #6fbcac;
 	/* padding: 1rem; */
+	h3 {
+		align-self: center;
+	}
 
 }
 
@@ -15,5 +18,11 @@
 	figcaption { display: none; }
 	.components-resizable-box__container {
 		display: block;
+	}
+	img {
+		display: block;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
 	}
 }
