--- a/src/accordion/style.scss
+++ b/src/accordion/style.scss
@@ -4,7 +4,25 @@
 	font-size: 1.5rem;
 	button {
 		width: 100%;
-		padding: 1rem;
-		font-size: 1.5rem;
+		appearance: none;
+		border: none;
+		background: none;
+		font-size: inherit;
+		font-weight: inherit;
+		text-align: inherit;
+		padding: inherit;
+		cursor: pointer;
+		display: flex;
+		justify-content: space-between;
+		&::after {
+			content: "▶";
+			transition: all 300ms ease;
+			display: inline-block;
+		}
+		&[aria-expanded="true"] {
+			&::after {
+				transform: rotate(90deg);
+			}
+		}
 	}
 }
